🤓improve classname helper, add route for image and default image when not found
